// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericSelectField  should render  snapshots for  loading items 1`] = `
<WithStyles(FormControl)
  style={
    Object {
      "width": "100%",
    }
  }
>
  <WithStyles(InputLabel)>
    Select item loading...
  </WithStyles(InputLabel)>
  <WithStyles(Select)
    autoWidth={false}
    disabled={true}
    id="selectedValue"
    multiple={false}
    name="selectedValue"
    onChange={[Function]}
    placeholder={null}
    value={null}
  >
    <WithStyles(MenuItem)
      key="select_field_0"
      value="Item 1"
    >
      Item 1
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      key="select_field_1"
      value="Item 2"
    >
      Item 2
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      key="select_field_2"
      value="Item 3"
    >
      Item 3
    </WithStyles(MenuItem)>
  </WithStyles(Select)>
</WithStyles(FormControl)>
`;

exports[`GenericSelectField  should render  snapshots for  no items 1`] = `
<WithStyles(FormControl)
  style={
    Object {
      "width": "100%",
    }
  }
>
  <WithStyles(InputLabel)>
    Select item 
  </WithStyles(InputLabel)>
  <WithStyles(Select)
    autoWidth={false}
    id="selectedValue"
    multiple={false}
    name="selectedValue"
    onChange={[Function]}
    placeholder={null}
    value=""
  />
</WithStyles(FormControl)>
`;

exports[`GenericSelectField  should render  snapshots for  one item 1`] = `
<WithStyles(FormControl)
  style={
    Object {
      "width": "100%",
    }
  }
>
  <WithStyles(InputLabel)>
    Select item 
  </WithStyles(InputLabel)>
  <WithStyles(Select)
    autoWidth={false}
    id="selectedValue"
    multiple={false}
    name="selectedValue"
    onChange={[Function]}
    placeholder={null}
    value=""
  >
    <WithStyles(MenuItem)
      key="select_field_0"
      value="Item 1"
    >
      Item 1
    </WithStyles(MenuItem)>
  </WithStyles(Select)>
</WithStyles(FormControl)>
`;
